[tool.poetry]
name = "dsp-project"
version = "0.1.0"
description = ""
authors = ["Svyatoslav <pchelintsev.sv@phystech.edu>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
librosa = "^0.10.1"
scipy = "^1.11.4"
fire = "^0.5.0"
soundfile = "^0.12.1"
matplotlib = "^3.8.2"
torchmetrics = "^1.2.1"
pesq = "^0.0.4"
torchaudio = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["."]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
